--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -339,18 +339,15 @@
       "metadata": {
         "id": "ORbn_8ivqWvK",
         "colab_type": "code",
-        "outputId": "cfe70df8-344d-4ebe-e3eb-83819b2dc25a",
+        "outputId": "b5653f57-9a9e-4d48-d038-e1c8d18ebff2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1309
+          "height": 1581
         }
       },
       "source": [
         "## MAGIC BEGINS \n",
         "print('Magic Begins')\n",
-        "reg = 0.0001\n",
-        "dropout = 0.5\n",
-        "units = 512\n",
         "\n",
         "##################################################################\n",
         "## USED EMBEDDING FROM KERAS\n",
@@ -367,17 +364,12 @@
         "################################################\n",
         "# model = RNN_model(embedded_sequences, num_class)\n",
         "\n",
-        "def smoothing_attention(x):\n",
-        "    e = K.sigmoid(x)\n",
-        "    s = K.sum(e, axis=-1, keepdims=True)\n",
-        "    return e / s\n",
         "  \n",
-        "# reg = 0.0001\n",
         "dropout = 0.5\n",
-        "hidden_dim = 512\n",
+        "hidden_dim = 1024\n",
+        "\n",
         "vector = Bidirectional(CuDNNGRU(hidden_dim, return_sequences=False))(embedded_sequences)\n",
         "lstm = Bidirectional(CuDNNGRU(hidden_dim, return_sequences=True))(embedded_sequences)\n",
-        "\n",
         "ee = Dot(axes=-1, normalize=True)([vector, lstm])  # calculate cosine similarity\n",
         "\n",
         "# Source: https://github.com/keras-team/keras/issues/4962#issuecomment-271934502\n",
@@ -388,14 +380,19 @@
         "output = Lambda(lambda x: K.sum(x, axis=-2))(output)\n",
         "# end of code from link\n",
         "\n",
-        "# output = Dense(256)(output)\n",
-        "# output = BatchNormalization()(output)\n",
-        "# output = Activation(\"relu\")(output)\n",
-        "# output = Dense(128)(output)\n",
+        "output = Dense(512)(output)\n",
+        "output = Dropout(dropout)(output)\n",
         "output = BatchNormalization()(output)\n",
-        "# output = Activation(\"relu\")(output)\n",
+        "output = Activation(\"relu\")(output)\n",
+        "\n",
+        "output = Dense(128)(output)\n",
+        "# output = Dropout(dropout)(output)\n",
+        "output = BatchNormalization()(output)\n",
+        "output = Activation(\"relu\")(output)\n",
+        "\n",
         "# output = Dropout(dropout)(output)\n",
         "output = Dense(num_class, activation='softmax')(output)\n",
+        "\n",
         "model = Model(sequence_input, output)\n",
         "print(model.summary())\n",
         "\n",
@@ -416,7 +413,7 @@
         "        callbacks=[early_stop],\n",
         "        validation_data=(X_val, Y_val))\n"
       ],
-      "execution_count": 65,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,76 +423,92 @@
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
-            "input_40 (InputLayer)           (None, 100)          0                                            \n",
+            "input_47 (InputLayer)           (None, 100)          0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "embedding_44 (Embedding)        (None, 100, 300)     5865000     input_40[0][0]                   \n",
+            "embedding_51 (Embedding)        (None, 100, 300)     5865000     input_47[0][0]                   \n",
             "__________________________________________________________________________________________________\n",
-            "bidirectional_51 (Bidirectional (None, 1024)         2500608     embedding_44[0][0]               \n",
+            "bidirectional_65 (Bidirectional (None, 2048)         8146944     embedding_51[0][0]               \n",
             "__________________________________________________________________________________________________\n",
-            "bidirectional_52 (Bidirectional (None, 100, 1024)    2500608     embedding_44[0][0]               \n",
+            "bidirectional_66 (Bidirectional (None, 100, 2048)    8146944     embedding_51[0][0]               \n",
             "__________________________________________________________________________________________________\n",
-            "dot_25 (Dot)                    (None, 100)          0           bidirectional_51[0][0]           \n",
-            "                                                                 bidirectional_52[0][0]           \n",
+            "dot_32 (Dot)                    (None, 100)          0           bidirectional_65[0][0]           \n",
+            "                                                                 bidirectional_66[0][0]           \n",
             "__________________________________________________________________________________________________\n",
-            "activation_46 (Activation)      (None, 100)          0           dot_25[0][0]                     \n",
+            "activation_64 (Activation)      (None, 100)          0           dot_32[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
-            "repeat_vector_23 (RepeatVector) (None, 1024, 100)    0           activation_46[0][0]              \n",
+            "repeat_vector_30 (RepeatVector) (None, 2048, 100)    0           activation_64[0][0]              \n",
             "__________________________________________________________________________________________________\n",
-            "permute_23 (Permute)            (None, 100, 1024)    0           repeat_vector_23[0][0]           \n",
+            "permute_30 (Permute)            (None, 100, 2048)    0           repeat_vector_30[0][0]           \n",
             "__________________________________________________________________________________________________\n",
-            "multiply_20 (Multiply)          (None, 100, 1024)    0           permute_23[0][0]                 \n",
-            "                                                                 bidirectional_52[0][0]           \n",
+            "multiply_27 (Multiply)          (None, 100, 2048)    0           permute_30[0][0]                 \n",
+            "                                                                 bidirectional_66[0][0]           \n",
             "__________________________________________________________________________________________________\n",
-            "lambda_33 (Lambda)              (None, 1024)         0           multiply_20[0][0]                \n",
+            "lambda_40 (Lambda)              (None, 2048)         0           multiply_27[0][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "batch_normalization_36 (BatchNo (None, 1024)         4096        lambda_33[0][0]                  \n",
+            "dense_78 (Dense)                (None, 512)          1049088     lambda_40[0][0]                  \n",
             "__________________________________________________________________________________________________\n",
-            "dense_60 (Dense)                (None, 19)           19475       batch_normalization_36[0][0]     \n",
+            "dropout_35 (Dropout)            (None, 512)          0           dense_78[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "batch_normalization_48 (BatchNo (None, 512)          2048        dropout_35[0][0]                 \n",
+            "__________________________________________________________________________________________________\n",
+            "activation_65 (Activation)      (None, 512)          0           batch_normalization_48[0][0]     \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_79 (Dense)                (None, 128)          65664       activation_65[0][0]              \n",
+            "__________________________________________________________________________________________________\n",
+            "batch_normalization_49 (BatchNo (None, 128)          512         dense_79[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "activation_66 (Activation)      (None, 128)          0           batch_normalization_49[0][0]     \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_80 (Dense)                (None, 19)           2451        activation_66[0][0]              \n",
             "==================================================================================================\n",
-            "Total params: 10,889,787\n",
-            "Trainable params: 10,887,739\n",
-            "Non-trainable params: 2,048\n",
+            "Total params: 23,278,651\n",
+            "Trainable params: 23,277,371\n",
+            "Non-trainable params: 1,280\n",
             "__________________________________________________________________________________________________\n",
             "None\n",
             "Compiling Model\n",
             "Start Fitting\n",
             "Train on 7200 samples, validate on 800 samples\n",
             "Epoch 1/25\n",
-            "7200/7200 [==============================] - 28s 4ms/step - loss: 1.7400 - acc: 0.5004 - val_loss: 1.5867 - val_acc: 0.4913\n",
+            "7200/7200 [==============================] - 71s 10ms/step - loss: 2.1022 - acc: 0.3533 - val_loss: 1.5284 - val_acc: 0.5262\n",
             "Epoch 2/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.8476 - acc: 0.7467 - val_loss: 1.1810 - val_acc: 0.6225\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 1.1587 - acc: 0.6306 - val_loss: 1.1447 - val_acc: 0.6462\n",
             "Epoch 3/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.4673 - acc: 0.8560 - val_loss: 1.0401 - val_acc: 0.6800\n",
+            "7200/7200 [==============================] - 58s 8ms/step - loss: 0.7667 - acc: 0.7614 - val_loss: 0.9204 - val_acc: 0.6963\n",
             "Epoch 4/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.2053 - acc: 0.9410 - val_loss: 1.3169 - val_acc: 0.7100\n",
+            "7200/7200 [==============================] - 58s 8ms/step - loss: 0.5116 - acc: 0.8446 - val_loss: 0.8208 - val_acc: 0.7350\n",
             "Epoch 5/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0756 - acc: 0.9808 - val_loss: 1.5448 - val_acc: 0.7013\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.3141 - acc: 0.9126 - val_loss: 0.8128 - val_acc: 0.7363\n",
             "Epoch 6/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0252 - acc: 0.9958 - val_loss: 1.5349 - val_acc: 0.7125\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.1734 - acc: 0.9608 - val_loss: 0.8774 - val_acc: 0.7450\n",
             "Epoch 7/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0095 - acc: 0.9992 - val_loss: 1.4965 - val_acc: 0.7175\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0915 - acc: 0.9819 - val_loss: 0.9330 - val_acc: 0.7600\n",
             "Epoch 8/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0059 - acc: 0.9994 - val_loss: 1.5815 - val_acc: 0.7162\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0505 - acc: 0.9935 - val_loss: 1.0726 - val_acc: 0.7338\n",
             "Epoch 9/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0021 - acc: 1.0000 - val_loss: 1.4917 - val_acc: 0.7225\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0278 - acc: 0.9971 - val_loss: 1.2172 - val_acc: 0.7188\n",
             "Epoch 10/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0014 - acc: 1.0000 - val_loss: 1.4994 - val_acc: 0.7200\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0160 - acc: 0.9985 - val_loss: 1.1790 - val_acc: 0.7375\n",
             "Epoch 11/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 0.0010 - acc: 1.0000 - val_loss: 1.5116 - val_acc: 0.7250\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0100 - acc: 0.9996 - val_loss: 1.1644 - val_acc: 0.7412\n",
             "Epoch 12/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 8.6283e-04 - acc: 1.0000 - val_loss: 1.5239 - val_acc: 0.7275\n",
+            "7200/7200 [==============================] - 57s 8ms/step - loss: 0.0066 - acc: 0.9999 - val_loss: 1.2839 - val_acc: 0.7262\n",
             "Epoch 13/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 7.2829e-04 - acc: 1.0000 - val_loss: 1.5367 - val_acc: 0.7262\n",
+            "7200/7200 [==============================] - 59s 8ms/step - loss: 0.0050 - acc: 0.9997 - val_loss: 1.2367 - val_acc: 0.7375\n",
             "Epoch 14/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 6.3966e-04 - acc: 1.0000 - val_loss: 1.5413 - val_acc: 0.7262\n",
+            "7200/7200 [==============================] - 53s 7ms/step - loss: 0.0037 - acc: 0.9999 - val_loss: 1.3057 - val_acc: 0.7363\n",
             "Epoch 15/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 5.4705e-04 - acc: 1.0000 - val_loss: 1.5488 - val_acc: 0.7262\n",
+            "7200/7200 [==============================] - 53s 7ms/step - loss: 0.0031 - acc: 1.0000 - val_loss: 1.3248 - val_acc: 0.7388\n",
             "Epoch 16/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 5.0053e-04 - acc: 1.0000 - val_loss: 1.5555 - val_acc: 0.7262\n",
+            "7200/7200 [==============================] - 53s 7ms/step - loss: 0.0027 - acc: 1.0000 - val_loss: 1.3114 - val_acc: 0.7438\n",
             "Epoch 17/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 4.5549e-04 - acc: 1.0000 - val_loss: 1.5721 - val_acc: 0.7250\n",
+            "7200/7200 [==============================] - 52s 7ms/step - loss: 0.0025 - acc: 0.9999 - val_loss: 1.3130 - val_acc: 0.7438\n",
             "Epoch 18/25\n",
-            "7200/7200 [==============================] - 20s 3ms/step - loss: 4.1743e-04 - acc: 1.0000 - val_loss: 1.5793 - val_acc: 0.7262\n"
+            "7200/7200 [==============================] - 53s 7ms/step - loss: 0.0023 - acc: 0.9999 - val_loss: 1.4035 - val_acc: 0.7388\n",
+            "Epoch 19/25\n",
+            "7200/7200 [==============================] - 52s 7ms/step - loss: 0.0023 - acc: 0.9999 - val_loss: 1.4453 - val_acc: 0.7338\n",
+            "Epoch 20/25\n",
+            "7200/7200 [==============================] - 52s 7ms/step - loss: 0.0019 - acc: 0.9999 - val_loss: 1.4531 - val_acc: 0.7300\n"
           ],
           "name": "stdout"
         },
@@ -503,13 +516,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f1c2b906940>"
+              "<keras.callbacks.History at 0x7f1c21558da0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 79
         }
       ]
     },
@@ -522,7 +535,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "f825dd2b-1ff2-4635-87f1-ff4ca93b7770"
+        "outputId": "683f10bc-7bbc-4e81-e52b-c43c45c04ea9"
       },
       "source": [
         "import time\n",
@@ -544,12 +557,12 @@
         "## do prediction  \n",
         "print('Finished Prediction, Check result!')"
       ],
-      "execution_count": 66,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Saving to file  05_06_11:37:24 .txt\n",
+            "Saving to file  05_06_13:03:32 .txt\n",
             "Start prediction\n",
             "Finished Prediction, Check result!\n"
           ],
